Word Wrap Break Word to fix pipe test
Word Wrap Break Word to fix pipe test

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ a:hover {
 p {
 	margin:0;
 	padding:0 0 0.9375em;
+	word-wrap: break-word;
 }
 
 h1,h2,h3,h4,h5,h6 {
